--- a/public/index.html
+++ b/public/index.html
@@ -12,13 +12,8 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Currency Converter App</title>
-    <style>
-      .app {
-        background-color: rgb(243 244 246);
-      }
-    </style>
   </head>
-  <body class="app">
+  <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
